# local-ai-lab

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LESSON1.md  LESSON2.md  LESSON3.md  LESSON4.md  LESSON5.md  LESSON6.md  LESSON7.md  LESSON8.md  LICENSE  PRODUCTION_NOTES.md  README.md  SECURITY.md  SYLLABUS.md  TUTORIAL.md  conftest.py  mcp_server.py  pyproject.toml  requirements.txt  run  start  status  stop  update
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  lesson_request.md
.github/workflows/: ci.yml  release.yml
docs/: about.html  documentation.html  index.html  lesson-1-rag.html  lesson-2-mcp.html  lesson-3-hybrid-retrieval-reranking.html  lesson-4-rag-safety-prompt-injection.html  lesson-5-rag-evaluation-regression-testing.html  troubleshooting.html
docs/assets/: analytics.js  highlight.css  slider.js  style.css
documents/: rag_tutorial.md  sample_manual.md
dotnet/lesson-1/: Chunk.cs  Config.cs  Engine.cs  Extract.cs  LocalRag.csproj  Program.cs  Prompts.cs  README.md  Retriever.cs  Store.cs  nuget.config  run.sh
dotnet/lesson-1/Providers/: ClaudeCodeProvider.cs  ILlmProvider.cs  OllamaProvider.cs
dotnet/lesson-1/wwwroot/: index.html
dotnet/lesson-2/: LocalRagMcp.csproj  Program.cs  README.md  run.sh
examples/: mcp_demo.py  mcp_web.py
lessons/: CURRICULUM.md  README.md
lessons/03-hybrid-retrieval-reranking/: README.md  expected-output.txt  lesson.json  overview.txt
lessons/03-hybrid-retrieval-reranking/data/: error_codes.md  power_issues.md  setup.md
lessons/03-hybrid-retrieval-reranking/dotnet/: HybridDemo.csproj  Program.cs  README.md  run.sh
lessons/03-hybrid-retrieval-reranking/node/: README.md  hybrid_demo.mjs  package.json  run.sh
lessons/03-hybrid-retrieval-reranking/python/: README.md  hybrid_demo.py  test_hybrid.py  web.py
lessons/03-hybrid-retrieval-reranking/story/: 01-tide-pools.md  02-spacesuit.md  03-long-dark.md  04-nuevo-eden.md  05-legend.md
lessons/04-rag-safety-prompt-injection/: README.md  expected-output.txt  lesson.json  overview.txt
lessons/04-rag-safety-prompt-injection/data/: account_help.md  shipping_faq.md  ticket_4731.md  ticket_5588.md
lessons/04-rag-safety-prompt-injection/dotnet/: Program.cs  SafeRagDemo.csproj
lessons/04-rag-safety-prompt-injection/node/: package.json  safe_rag_demo.mjs
lessons/04-rag-safety-prompt-injection/python/: safe_rag_demo.py  test_safe_rag.py  web.py
lessons/04-rag-safety-prompt-injection/story/: 01-getting-started.md  02-billing-and-refunds.md  03-troubleshooting.md  04-community-tip.md  05-account-recovery.md  06-signing-in.md
lessons/05-rag-evaluation-regression-testing/: README.md  expected-output.txt  lesson.json  overview.txt
lessons/05-rag-evaluation-regression-testing/data/: golden.json  password_reset.md  refund_policy.md  warranty_terms.md
lessons/05-rag-evaluation-regression-testing/dotnet/: EvalRagDemo.csproj  Program.cs
lessons/05-rag-evaluation-regression-testing/node/: eval_rag.mjs  package.json
lessons/05-rag-evaluation-regression-testing/python/: eval_rag.py  test_eval_rag.py  web.py
lessons/_template/: README.md  lesson.json
lessons/_template/data/: .gitkeep
lessons/_template/dotnet/: .gitkeep
lessons/_template/node/: .gitkeep
lessons/_template/python/: .gitkeep  demo.py  web.py
localrag/: __init__.py  __main__.py  chunk.py  config.py  engine.py  extract.py  prompts.py  retriever.py  store.py  web.py
localrag/providers/: __init__.py  claude_code.py  gemini.py  ollama.py  openai.py
localrag/templates/: index.html
node/lesson-1/: README.md  package-lock.json  package.json  run.sh
node/lesson-1/src/: chunk.js  cli.js  config.js  engine.js  extract.js  prompts.js  retriever.js  store.js  web.js
node/lesson-1/src/providers/: claudeCode.js  index.js  ollama.js
node/lesson-1/src/templates/: index.html
node/lesson-2/: README.md  package-lock.json  package.json  run.sh
node/lesson-2/src/: demo.js  server.js
roadmap/: LESSON10-semantic-kernel.md  LESSON11-bedrock.md  LESSON12-google-adk.md  LESSON7-langchain.md  LESSON8-langgraph.md  LESSON9-ollama.md  README.md
scripts/: include.sh
tests/: test_engine_web_smoke.py  test_lesson_engine.py  test_mcp.py  test_smoke.py
tools/: build_lesson_pdfs.py  lesson.py  lesson_web.py  new-lesson.sh  renumber-lessons.sh  sync-curriculum.sh  sync-readme-downloads.py
tools/templates/: lesson-gui.html  lesson-preview.html
