[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localrag"
dynamic = ["version"]
description = "A tiny, local Retrieval-Augmented Generation demo — the reference package for the local-ai-lab course."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nik Reljin", email = "nikola.reljin@gmail.com" }]
keywords = ["rag", "retrieval-augmented-generation", "local-ai", "llm", "embeddings", "bm25", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]

# Runtime dependencies mirror requirements.txt *minus* pytest (which CI still consumes). pytest is a
# dev dependency, declared under optional-dependencies below rather than as a runtime requirement.
dependencies = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "rank-bm25>=0.2.2",
    "numpy>=1.24",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.urls]
Homepage = "https://nikolareljin.github.io/local-ai-lab/"
Documentation = "https://nikolareljin.github.io/local-ai-lab/documentation.html"
Source = "https://github.com/nikolareljin/local-ai-lab"
Changelog = "https://github.com/nikolareljin/local-ai-lab/blob/main/CHANGELOG.md"

[project.scripts]
localrag = "localrag.__main__:main"

# Discover the package and its subpackages (localrag, localrag.providers) — but not
# tools/, tests/, examples/, or the course content, which aren't under localrag/.
[tool.setuptools.packages.find]
include = ["localrag*"]

# Ship non-Python package data the runtime needs (the Flask web UI template).
[tool.setuptools.package-data]
localrag = ["templates/*"]

[tool.setuptools.dynamic]
# Single source of truth for the version: localrag/__init__.py:__version__.
version = { attr = "localrag.__version__" }

[tool.pytest.ini_options]
testpaths = ["tests"]

# Tooling config. CI runs ruff and mypy — see .github/workflows/ci.yml for the exact paths.
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Conservative, high-signal rules: pycodestyle errors, pyflakes, import sorting.
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# tools/ and examples/ are teaching scripts: HTML/string-heavy, with deliberate sys.path setup
# before imports. Keep the high-value checks (pyflakes F, import order I) but skip cosmetic
# line-length (E501) and script-pattern rules so the demo code stays as-written and readable.
"tools/**" = ["E501", "E402", "E731"]
"examples/**" = ["E501", "E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Type-check the package only; the demo's course code and scripts are intentionally untyped.
files = ["localrag"]
